鬼滅の刃のキャラクター一覧を取得するAPIより画像を取得し表示する機能を実装

--- a/index.html
+++ b/index.html
@@ -4,8 +4,22 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
+  <link rel="stylesheet" href="style.css"/>
 </head>
 <body>
+  <div>
+    <ul>
+      <li><input type="radio" id="js-allchara-radio" name="kimetsu" onclick="loadData('allchara')">全キャラクター</li>
+      <li><input type="radio" id="js-onisatsu-radio" name="kimetsu" onclick="loadData('onisatsu')">鬼殺隊</li>
+      <li><input type="radio" id="js-hashira-radio" name="kimetsu" onclick="loadData('hashira')">柱</li>
+      <li><input type="radio" id="js-oni-radio" name="kimetsu" onclick="loadData('oni')">鬼</li>
+    </ul>
+  </div>
+  <div id="loading"></div>
+  <div id="js-allchara" class="chara"></div>
+  <div id="js-onisatsu" class="chara"></div>
+  <div id="js-hashira" class="chara"></div>
+  <div id="js-oni" class="chara"></div>
   <script src="index.js"></script>
 </body>
 </html>
