リファクタ

--- a/index.html
+++ b/index.html
@@ -9,17 +9,14 @@
 <body>
   <div>
     <ul>
-      <li><input type="radio" id="js-allchara-radio" name="kimetsu" onclick="loadData('allchara')">全キャラクター</li>
-      <li><input type="radio" id="js-onisatsu-radio" name="kimetsu" onclick="loadData('onisatsu')">鬼殺隊</li>
+      <li><input type="radio" id="js-allchara-radio" name="kimetsu" onclick="loadData('all')">全キャラクター</li>
+      <li><input type="radio" id="js-kisatsu-radio" name="kimetsu" onclick="loadData('kisatsutai')">鬼殺隊</li>
       <li><input type="radio" id="js-hashira-radio" name="kimetsu" onclick="loadData('hashira')">柱</li>
       <li><input type="radio" id="js-oni-radio" name="kimetsu" onclick="loadData('oni')">鬼</li>
     </ul>
   </div>
   <div id="loading"></div>
-  <div id="js-allchara" class="chara"></div>
-  <div id="js-onisatsu" class="chara"></div>
-  <div id="js-hashira" class="chara"></div>
-  <div id="js-oni" class="chara"></div>
+  <div id="js-target" class="chara"></div>
   <script src="index.js"></script>
 </body>
 </html>
